<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Profiles</string>
        
    <!-- Action menu -->
    <string name="create">New</string>
    <string name="createTags">Sign Tags</string>
    
    <string name="search">Search</string>
    
    <string name="searchBatches">Query Batches&#8230;</string>
	<string name="searchTags">Query Tags&#8230;</string>
    
    <string name="config">Config</string>
    
    <string name="action_settings">Settings</string>
    <string name="cfgSettings">Settings&#8230;</string>
    <string name="action_apidoc">API Documentation</string>
    <string name="cfgApidoc">API Documentation&#8230;</string>    
    <string name="action_feedback">Feedback</string>
    <string name="cfgFeedback">Feedback&#8230;</string>
    <string name="action_partner">SMART COSMOS Portal</string>
    <string name="cfgPartner">SMART COSMOS Portal&#8230;</string>
    <string name="action_account">Request Profiles account</string>
    <string name="cfgAccount">Request Profiles account&#8230;</string>            
    <string name="action_about">About</string> 
    <string name="cfgAbout">About&#8230;</string>
    
    
    <string name="app_about">
        SMART COSMOS Profiles App\n
        Version 1.13\n
        &#169; 2017 SMARTRAC TECHNOLOGY Fletcher, Inc.
    </string>
    <string name="app_onClose">
        Do you want to close Profiles?
    </string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>

    
    <string name="txtDescription">Description</string>
    <string name="txtUidEmpty">UID: </string>
    <string name="txtNtagEmpty">Chip Type: </string>
    <string name="txtStatusHeader">Status:</string>
    <string name="txtStatusMsg"></string>
    <string name="txtVerificationHeader">Verification result:</string>
    <string name="txtVerificationMsg"></string>
    
    <!-- Welcome -->
    <string name="txtWelcome1">
        Welcome to SMART COSMOS\n\nThis app is publicly available on
        <a href="https://github.com/SMARTRACTECHNOLOGY-PUBLIC/smartcosmos-sdk-java-android-samples">GitHub</a>
        and demonstrates the integration between RFID and SMART COSMOS Profiles.
	    Visit us on <a href="https://www.smart-cosmos.com">www.smart-cosmos.com</a> and read through our
	    <a href="https://api.smartcosmos.net">API documentation</a>.
	</string>
	<string name="welcome_btnOK">Continue</string>
    
    <!-- Scan Tag -->
    <string name="scan_tag">Scan either a secure tag or an unknown tag to check the authentication result&#8230;</string>
    
    <!-- Result Tag -->
    <string name="txtNxpSignature">NXP Signature Check:</string>
    <string name="txtProfilesAuth">Tag Authentication:</string>
    <string name="txtProductAuth">Product Authentication:</string>
    <string name="resulttag_btnOK">OK</string>
    
    <!-- Query Batches -->
    <string name="txtQueryBatches">Find Batches By Criteria</string>
    <string name="txtQueryCount">Max number of results:</string>
    <string name="queryBatches_btnOK">Find Batches</string>
    
    <string name="paramCustomerPO">Customer Purchase Order</string>
    <string name="paramDelivery">Delivery Number</string>
    <string name="paramOrderId">Order ID Number</string>

    <!-- Found Batches -->
    <string name="txtFoundBatches">Batches Found:</string>
    <string name="foundBatches_btnOK">OK</string>      
    
    <!-- Query Tags -->
    <string name="txtQueryTags">Find Tags By Criteria</string>
    <!-- <string name="txtQueryCount">Max number of results:</string> -->
    <string name="queryTagsUrnPrefix">urn:uuid:</string>
    <string name="queryTagsUrnSmartracPrefix">urn:uuid:smartrac-group:batch:</string>
    <string name="queryTags_btnOK">Find Tags</string>
    
    <string name="paramBatchId">Batch ID</string>

    <!-- Found Tags -->
    <string name="txtFoundTags">Tags Found:</string>
    <string name="foundTags_btnOK">OK</string>

    <!-- Paging Navigation -->
    <string name="txtPageInformation">Page 0 of 0"</string>
    
    <!-- Encode Tag -->
    <string name="encode_tag">Tap a new tag to encode it with authentication data&#8230;
        \n\nAll tags encoded by the app will be added to the Batch \'MyProfilesBatch\'.</string>    
    
    <!-- Settings -->
    <string name="settingsNetworkTitle">Network settings</string>
    <string name="settingsNetworkServer">Profiles Server</string>
    <string name="hintNetworkServer">http://profiles-server.net:8080</string>
    <string name="defaultNetworkServer">https://profiles-demo.smartcosmos.net</string>
    <string name="settingsNetworkUser">Profiles User</string>
    <string name="hintNetworkUser">user@domain.com</string>
    <string name="defaultNetworkUser"></string>
    <string name="settingsNetworkPassword">Profiles Password</string>
    <string name="hintNetworkPassword">password</string>
    <string name="defaultNetworkPassword"></string>
    <string name="button_testConnection">Test Connection</string>
    
    <!-- URLs -->
    <string name="urlApidoc">https://api.smartcosmos.net</string>
    <string name="urlGithub">https://github.com/SMARTRACTECHNOLOGY-PUBLIC/smartcosmos-sdk-java-android-samples</string>
    <string name="urlFeedback">https://smartractechnology.atlassian.net/rest/collectors/1.0/template/form/0a8f8726?os_authType=none</string>
    <string name="urlPartner">https://www.smart-cosmos.com</string>
    
    <!-- Request Account -->
    <string name="accEmailAddr">api@smartrac-group.com</string>
    <string name="accEmailSubj">Request new Profiles account</string>
    <string name="accEmailBody">Please create a new Profiles account for me.\n\nThank you!</string>
        
</resources>
