<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smartrac.profiles.productauth.MainActivity$SettingsFragment" >

    <TextView
        android:id="@+id/textViewSettingsNetworkTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/settingsNetworkTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Server -->

    <TextView
        android:id="@+id/labelServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSettingsNetworkTitle"
        android:layout_below="@+id/textViewSettingsNetworkTitle"
        android:layout_marginTop="10dp"
        android:text="@string/settingsNetworkServer"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/editTextSettingsNetworkServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSettingsNetworkTitle"
        android:layout_below="@+id/labelServer"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hintNetworkServer"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <!-- User input -->

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSettingsNetworkTitle"
        android:layout_below="@+id/editTextSettingsNetworkServer"
        android:layout_marginTop="10dp"
        android:text="@string/settingsNetworkUser"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
    <EditText
        android:id="@+id/editTextSettingsNetworkUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSettingsNetworkTitle"
        android:layout_below="@+id/labelUser"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hintNetworkUser"
        android:inputType="textEmailAddress" />

    <!-- Password input -->

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSettingsNetworkTitle"
        android:layout_below="@+id/editTextSettingsNetworkUser"
        android:layout_marginTop="10dp"
        android:text="@string/settingsNetworkPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/editPasswordSettingsNetworkPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSettingsNetworkTitle"
        android:layout_below="@+id/labelPassword"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hintNetworkPassword"
        android:inputType="textPassword" />
    
    <!-- Test connection button -->
    <Button
        android:id="@+id/buttonTestConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOK"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:onClick="onClickTestConnection"
        android:text="@string/button_testConnection" />
    
    <!-- OK button -->
    <Button
        android:id="@+id/buttonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickOK"
        android:text="@string/resulttag_btnOK" />

</RelativeLayout>